<resources>
    <string name="app_name" translatable="false">HobeeD</string>

    <string name="unknown">Неизвестно</string>

    <string name="address_title">Адрес:</string>
    <string name="status_title">Статус:</string>
    <string name="phone_title">Телефон:</string>
    <string name="inn_title">ИНН</string>

    <string name="amount_title">Количество:</string>
    <string name="price_title">Цена:</string>

    <string name="all_price_title">Общая сумма заказа</string>
    <string name="title_main" translatable="false">Hobee-D</string>
    <string name="title_home">Главная</string>
    <string name="title_map">Карта</string>
    <string name="title_orders">Заявки</string>
    <string name="som">сум</string>

    <string name="status_new">Новый</string>
    <string name="status_canceled">Отменен</string>
    <string name="status_finished">Выполнен</string>

    <string name="payment_transfer">Перечисление</string>
    <string name="payment_cash">Налчные</string>
    <string name="payment_terminal">Терминал</string>
    <string name="create_app_title">Создание заявки</string>
    <string name="record_title">Беседа</string>
    <string name="discussion_history_title">История бесед</string>
    <string name="settings_title">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>