<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_rounded_stroke_8"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="OXYMED"
            android:textColor="@color/darkblue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address_title"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/card_title"
            app:layout_constraintTop_toBottomOf="@+id/card_title" />

        <TextView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="@string/status_title"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/status"
            app:layout_constraintEnd_toStartOf="@+id/status"
            app:layout_constraintTop_toTopOf="@+id/status"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_title"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/address_title"
            app:layout_constraintTop_toBottomOf="@+id/address_title" />

        <TextView
            android:id="@+id/inn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/inn_title"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/phone_title"
            app:layout_constraintTop_toBottomOf="@+id/phone_title" />


        <TextView
            android:id="@+id/all_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_price_title"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/inn_title"
            app:layout_constraintTop_toBottomOf="@+id/inn_title" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Мирабадский район, Дом 11-2"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/address_title" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="+99898 123 23 43"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/inn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="32121100968"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="20 000 000 сум"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/inn"
            app:layout_constraintTop_toBottomOf="@+id/inn" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/status_done"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="Выполнен"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/address"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/debt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Задолжность"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/debt"
            app:layout_constraintTop_toTopOf="@+id/debt" />

        <TextView
            android:id="@+id/debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>